remove other files

--- a/source code/mainwindow.ui
+++ b/source code/mainwindow.ui
@@ -51,6 +51,9 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="toolTip">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Export shared list&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
       <property name="text">
        <string>Export shared list</string>
       </property>
@@ -444,6 +447,9 @@
             <height>34</height>
            </size>
           </property>
+          <property name="toolTip">
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Clear all data.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
           <property name="text">
            <string>Clear all</string>
           </property>
@@ -468,7 +474,7 @@
      <x>0</x>
      <y>0</y>
      <width>916</width>
-     <height>26</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_Files">
