update source code

--- a/source code/VennPainter.qrc
+++ b/source code/VennPainter.qrc
@@ -13,5 +13,7 @@
         <file alias="edward.png">Images/edward.png</file>
         <file>Images/qtlogo-64.png</file>
         <file alias="reset.png">Images/reset.png</file>
+        <file>Images/painter.png</file>
+        <file>Images/painters.png</file>
     </qresource>
 </RCC>
